# chat-app

./: .dockerignore  .env.example  .env.production.example  .gitignore  .npmrc  CALLING.md  ENCRYPTION.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tostart.txt
.github/workflows/: desktop-release.yml
apps/desktop/: .env.example  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  env.ts  main.tsx  polyfills.ts
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: AuthPanel.tsx  (+14 more)
apps/mobile/: app.json  index.js  metro.config.js  package.json  polyfills.js  webcrypto-polyfill.js
apps/mobile/app/: _layout.tsx  chats.tsx  devices.tsx  friends.tsx  groups.tsx  index.tsx  login.tsx  register.tsx  verify-email.tsx
apps/mobile/src/: env.ts  theme.ts
apps/web/: next.config.ts  package.json  tsconfig.tsbuildinfo  vercel.json
apps/web/public/: sw.js
apps/web/src/: middleware.ts
docs/: discord-style-social-plan.md  turn-production.md
infra/docker/: docker-compose.yml
infra/fly/: gateway.toml
infra/turn/: turnserver.conf
scripts/: db-migrate.mjs  db-reset.mjs  env.mjs  fly-gateway-secrets.mjs  free-port.mjs  phase0-demo.ts  setup.mjs  wait-for-infra.mjs
services/gateway/: Dockerfile  package.json
services/gateway/src/: call-store.ts  calls.ts  env.ts  index.ts  load-env.ts  presence.ts
(+144 files in other folders)
