[package]
name = "vaultchat-desktop"
version = "0.0.1"
description = "VaultChat — end-to-end encrypted messaging"
authors = ["VaultChat"]
edition = "2021"

[lib]
name = "vaultchat_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
